@startuml Domaenemodel
' =====================================================================
' NFHotel 2.0 — Domænemodel
' Genereret 2026-09-08 ud fra src/NFHotel.Domain/
'
' Forretningens begreber. Ingen teknik: ingen repositories, ingen DTO'er,
' ingen metoder der kun findes af hensyn til implementeringen.
' =====================================================================

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam roundCorner 6

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #2F4739
  ArrowColor #2F4739
  FontColor #1C1F1D
  AttributeFontColor #5A615C
  StereotypeFontColor #8A6A34
}
skinparam enum {
  BackgroundColor #F7F5F0
  BorderColor #B08A4F
  FontColor #1C1F1D
  AttributeFontColor #5A615C
}
skinparam note {
  BackgroundColor #F7F5F0
  BorderColor #DDD9D0
  FontColor #5A615C
}

hide methods
hide circle

title NFHotel 2.0 — Domænemodel

' ---------------------------------------------------------------------
' Begreber
' ---------------------------------------------------------------------

class Booking {
  Bookingnummer
  Ankomstdato
  Afrejsedato
  Faktisk udtjekningsdato
  Indtjekningstidspunkt
  Udtjekningstidspunkt
  Antal nætter
  Effektiv slutdato
}

class Room {
  Værelsesnummer
  Etage
  Kapacitet
}

class Guest {
  Fornavn
  Efternavn
  E-mail
  Telefonnummer
  Land
  Pasnummer
}

class DateRange <<værdiobjekt>> {
  Start
  Slut
  Antal nætter
}

enum BookingStatus {
  Afventer
  Bekræftet
  Tjekket ind
  Tjekket ud
  Annulleret
}

enum RoomStatus <<bookbarhed>> {
  Ledig
  Ude af drift
  Vedligehold
}

enum HousekeepingStatus <<rengøringsstand>> {
  Ren
  Daglig rengøring mangler
  Slutrengøring mangler
  Rengøring i gang
  Service anmodet
  Service i gang
}

enum RoomSize {
  Enkelt
  Dobbelt
  Suite
}

' ---------------------------------------------------------------------
' Relationer
' ---------------------------------------------------------------------

Guest "1" -- "0..*" Booking : foretager >
Room  "1" -- "0..*" Booking : udlejes gennem >

Booking ..> DateRange : periode
Booking --> BookingStatus : status
Room --> RoomStatus : bookbarhed
Room --> HousekeepingStatus : rengøringsstand
Room --> RoomSize : type

' ---------------------------------------------------------------------
' Forretningsregler
' ---------------------------------------------------------------------

note bottom of Booking
  **Perioden er halvåben.**
  En gæst der rejser den 5. og en der ankommer
  den 5. deler ikke værelset.

  **Effektiv slutdato** er normalt afrejsedatoen,
  men ved tidlig udtjekning den faktiske
  udtjekningsdato — så værelset frigives.

  **Annullering sletter ikke.** Bookingen bliver
  liggende med status Annulleret.
end note

note bottom of Room
  **Bookbarhed og rengøringsstand er adskilt.**
  Et værelse kan være ledigt til udlejning
  og samtidig mangle rengøring.

  Det gamle system havde ét felt til begge —
  og det var uenigt med sin egen brugerflade.
end note

note as N1
  **Bevidst ikke modelleret**
  --
  **Pris** — der findes ingen prismodel.
  RoomSize er en kategori, ikke en takst.
  Uden pris kan omsætning ikke beregnes.

  **Bruger og rolle** — autentificering er udskudt.
  Systemet ved i dag ikke hvem der handler.

  **Betaling og faktura** — følger af prisen.

  **Tillægsydelser** — foreslået, ikke besluttet.
end note

@enduml
